tests/machine/x/go/right_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/right_join.go:14:17: undefined: Customer
../../../tests/machine/x/go/right_join.go:15:3: undefined: Customer
../../../tests/machine/x/go/right_join.go:19:3: undefined: Customer
../../../tests/machine/x/go/right_join.go:23:3: undefined: Customer
../../../tests/machine/x/go/right_join.go:27:3: undefined: Customer
../../../tests/machine/x/go/right_join.go:32:14: undefined: Order
../../../tests/machine/x/go/right_join.go:36:5: undefined: Order
../../../tests/machine/x/go/right_join.go:40:5: undefined: Order
../../../tests/machine/x/go/right_join.go:45:21: undefined: Result
../../../tests/machine/x/go/right_join.go:50:11: undefined: Customer
../../../tests/machine/x/go/right_join.go:50:11: too many errors

1: //go:build ignore
